
2009-03-09  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: BarPlot, HorizontalBarPlot and VerticalBarPlot revision
        		 and refactoring;
        		Color themes are now allowed for backgrounds.

2009-03-08  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Code revision and refactoring;
        		The BarPlot class is now a base class on top of which
        		 the classes HorizontalBarPlot and VerticalBarPlot are
        		 built	
        		Color themes are now available;
        		PiePlot and DonutPlot data is now ordered;
        		Horizontal label collision problem was solved for
        		 BarPlots;
        		Axis titles are now allowed for ScatterPlot, DotLinePlot
        		 and FunctionPlot classes.
        * tests.py: 	Theme tests were added;
        		BarPlot tests were changed into HorizontalBarPlot 
        		and VerticalBarPlot tests.

2009-01-30  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Class structure was refactored as it was noted that
        		the new ScatterPlot was able to render DotLine and 
        		FunctionPlots;
        		Following the refactoring, the bounds associated with
        		a FunctionPlot chart (x_bounds) now define a closed
        		interval, which means the last value is also taken
        		taken into account;
        		Error bars support was added to the ScatterPlot;
        		All h_* and v_* parameters have been changed to x_*
        		and y_*.
        * tests.py: 	FunctionPlot tests were changed to fit the new bounds;
        		All tests were changed to reflect the h_* and v_* to 
        		x_* and y_* parameter change.

2009-01-27  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Bug fixes;
        		Code refactoring for the Plot and DotLinePlot classes;
        		Added ScatterPlot class;
        		Changed the code Josselin added to draw the y axis
        		title. Moved the code to render_axis and changed
        		the way the titles are drawn;